--- a/Notebooks/ROS Services and Parameters.ipynb
+++ b/Notebooks/ROS Services and Parameters.ipynb
@@ -33,8 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "rosservice -h"
+    "!rosservice -h"
    ]
   },
   {
@@ -50,8 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "rosservice list"
+    "!rosservice list"
    ]
   },
   {
@@ -67,8 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "rosservice type clear"
+    "!rosservice type clear"
    ]
   },
   {
@@ -86,8 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "rosservice call clear"
+    "!rosservice call clear"
    ]
   },
   {
@@ -105,8 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "rosservice type spawn | rossrv show"
+    "!rosservice type spawn | rossrv show"
    ]
   },
   {
@@ -122,8 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "rosservice call spawn 2 2 0.2 \"\""
+    "!rosservice call spawn 2 2 0.2 \"\""
    ]
   },
   {
@@ -146,8 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "rosparam -h"
+    "!rosparam -h"
    ]
   },
   {
@@ -163,8 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "rosparam list"
+    "!rosparam list"
    ]
   },
   {
@@ -177,13 +169,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "rosparam set background_r 150"
+    "!rosparam set background_r 150"
    ]
   },
   {
@@ -199,8 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "rosservice call clear"
+    "!rosservice call clear"
    ]
   },
   {
@@ -216,15 +204,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "rosparam get /"
+    "!rosparam get /"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's begin to write some code. First, you will learn how to write a simple publisher and subscriber in Python."
+    "Now let's begin to write some code. First, you will learn how to write a simple [publisher](Writing the Publisher Node in Python.ipynb) and [subscriber](Writing the Subscriber Node in Python.ipynb) in Python."
    ]
   }
  ],
