--- a/Notebooks/ROS Nodes.ipynb
+++ b/Notebooks/ROS Nodes.ipynb
@@ -39,123 +39,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash --bg\n",
-    "roscore"
+    "!roscore"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using `rosnode`\n",
-    "\n",
-    "`rosnode` displays information about the ROS nodes that are currently running. The `rosnode list` command lists these active nodes:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "rosnode list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "rosnode info rosout"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Using `rosrun`\n",
-    "\n",
-    "`rosrun` allows you to use the package name to directly run a node within a package (without having to know the package path)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash --bg\n",
-    "rosrun turtlesim turtlesim_node"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "NOTE: The turtle may look different in your turtlesim window. Don't worry about it - there are [many types of turtle](http://wiki.ros.org/Distributions#Current_Distribution_Releases) and yours is a surprise!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "rosnode list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "One powerful feature of ROS is that you can reassign Names from the command-line.\n",
-    "\n",
-    "Close the turtlesim window to stop the node. Now let's re-run it, but this time use a [Remapping Argument](http://wiki.ros.org/Remapping%20Arguments) to change the node's name:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash --bg\n",
-    "rosrun turtlesim turtlesim_node __name:=my_turtle"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, if we go back and use `rosnode list`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "rosnode list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Review\n",
-    "What was covered:\n",
-    "\n",
-    "* roscore = ros+core : master (provides name service for ROS) + rosout (stdout/stderr) + parameter server (parameter server will be introduced later)\n",
-    "* rosnode = ros+node : ROS tool to get information about a node.\n",
-    "* rosrun = ros+run : runs a node from a given package.\n",
-    "\n",
-    "Now that you understand how ROS nodes work, let's look at how [ROS topics](ROS%20Topics.ipynb) work."
+    "Keep this tab open and [proceed to the next steps of the tutorial](ROS Nodes continued.ipynb)."
    ]
   }
  ],
