--- a/Notebooks/ROS Topics.ipynb
+++ b/Notebooks/ROS Topics.ipynb
@@ -18,8 +18,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "rosnode list"
+    "!rosnode list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If not running, [start roscore again](ROS Nodes.ipynb)."
    ]
   },
   {
@@ -55,8 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "rostopic -h"
+    "!rostopic -h"
    ]
   },
   {
@@ -72,8 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "rostopic list -v"
+    "!rostopic list -v"
    ]
   },
   {
@@ -89,8 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "rostopic type /turtle1/cmd_vel"
+    "!rostopic type /turtle1/cmd_vel"
    ]
   },
   {
@@ -106,8 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "rosmsg show geometry_msgs/Twist"
+    "!rosmsg show geometry_msgs/Twist"
    ]
   },
   {
@@ -123,8 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "rostopic pub -1 /turtle1/cmd_vel geometry_msgs/Twist -- \\\n",
+    "!rostopic pub -1 /turtle1/cmd_vel geometry_msgs/Twist -- \\\n",
     "'[2.0, 0.0, 0.0]' '[0.0, 0.0, 1.8]'"
    ]
   },
