--- a/Notebooks/index.ipynb
+++ b/Notebooks/index.ipynb
@@ -4,158 +4,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Understanding ROS Nodes\n",
-    "\n",
-    "This tutorial introduces ROS graph concepts and discusses the use of `roscore`, `rosnode`, and `rosrun` commandline tools.\n",
-    "\n",
-    "Source: [ROS Wiki](http://wiki.ros.org/ROS/Tutorials/UnderstandingNodes)"
+    "## Core ROS Tutorials"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Quick Overview of Graph Concepts\n",
-    "* Nodes: A node is an executable that uses ROS to communicate with other nodes.\n",
-    "* Messages: ROS data type used when subscribing or publishing to a topic.\n",
-    "* Topics: Nodes can publish messages to a topic as well as subscribe to a topic to receive messages.\n",
-    "* Master: Name service for ROS (i.e. helps nodes find each other)\n",
-    "* rosout: ROS equivalent of stdout/stderr\n",
-    "* roscore: Master + rosout + parameter server (parameter server will be introduced later)"
+    "### Beginner Level"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### roscore\n",
+    "#### [Understanding ROS nodes](ROS Nodes.ipynb)\n",
     "\n",
-    "`roscore` is the first thing you should run when using ROS."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash --bg\n",
-    "roscore"
+    "This tutorial introduces ROS graph concepts and discusses the use of roscore, rosnode, and rosrun commandline tools."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using `rosnode`\n",
+    "#### [Understanding ROS Topics](ROS Topics.ipynb)\n",
     "\n",
-    "`rosnode` displays information about the ROS nodes that are currently running. The `rosnode list` command lists these active nodes:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "rosnode list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "rosnode info rosout"
+    "This tutorial introduces ROS topics as well as using the rostopic and rqt_plot commandline tools."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using `rosrun`\n",
+    "#### [Understanding ROS Services and Parameters](ROS Services and Parameters.ipynb)\n",
     "\n",
-    "`rosrun` allows you to use the package name to directly run a node within a package (without having to know the package path)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash --bg\n",
-    "rosrun turtlesim turtlesim_node"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "NOTE: The turtle may look different in your turtlesim window. Don't worry about it - there are [many types of turtle](http://wiki.ros.org/Distributions#Current_Distribution_Releases) and yours is a surprise!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "rosnode list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "One powerful feature of ROS is that you can reassign Names from the command-line.\n",
-    "\n",
-    "Close the turtlesim window to stop the node. Now let's re-run it, but this time use a [Remapping Argument](http://wiki.ros.org/Remapping%20Arguments) to change the node's name:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash --bg\n",
-    "rosrun turtlesim turtlesim_node __name:=my_turtle"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, if we go back and use `rosnode list`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "rosnode list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Review\n",
-    "What was covered:\n",
-    "\n",
-    "* roscore = ros+core : master (provides name service for ROS) + rosout (stdout/stderr) + parameter server (parameter server will be introduced later)\n",
-    "* rosnode = ros+node : ROS tool to get information about a node.\n",
-    "* rosrun = ros+run : runs a node from a given package.\n",
-    "\n",
-    "Now that you understand how ROS nodes work, let's look at how [ROS topics](ROS%20Topics.ipynb) work."
+    "This tutorial introduces ROS services, and parameters as well as using the rosservice and rosparam commandline tools. "
    ]
   }
  ],
@@ -179,5 +62,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
